--- a/index.html
+++ b/index.html
@@ -4,167 +4,75 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>NeoGPT</title>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 <style>
-  body {
-    margin: 0;
-    padding: 0;
-    background: linear-gradient(135deg, #0d0d0d, #1a1a1a);
-    color: #f5f5f5;
-    font-family: 'Roboto', sans-serif;
-  }
-  h1, h2 {
-    font-family: 'Orbitron', sans-serif;
-    color: #1f8ef1;
-    text-align: center;
-    margin: 20px 0;
-  }
-  .container {
-    max-width: 800px;
-    margin: auto;
-    padding: 20px;
-  }
-  textarea {
-    width: 100%;
-    padding: 15px;
-    margin: 10px 0;
-    border-radius: 10px;
-    border: none;
-    resize: none;
-    font-size: 16px;
-    background-color: #1a1a1a;
-    color: #f5f5f5;
-  }
-  button {
-    padding: 12px 25px;
-    border: none;
-    border-radius: 10px;
-    background: linear-gradient(90deg, #1f8ef1, #6a11cb);
-    color: #fff;
-    font-size: 16px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: 0.3s;
-  }
-  button:hover {
-    transform: scale(1.05);
-    box-shadow: 0 0 20px #1f8ef1, 0 0 30px #6a11cb;
-  }
-  .output {
-    background-color: #121212;
-    border-radius: 10px;
-    padding: 15px;
-    margin-top: 15px;
-    min-height: 50px;
-    box-shadow: 0 0 15px #1f8ef1 inset;
-    overflow-y: auto;
-    max-height: 400px;
-  }
-  .chat-message {
-    margin-bottom: 10px;
-  }
-  .chat-message strong {
-    color: #1f8ef1;
-  }
-  img.generated-image {
-    margin-top: 10px;
-    border-radius: 10px;
-    max-width: 100%;
-    box-shadow: 0 0 15px #6a11cb;
-  }
-  .loading {
-    display: inline-block;
-    width: 15px;
-    height: 15px;
-    border: 3px solid #1f8ef1;
-    border-top: 3px solid transparent;
-    border-radius: 50%;
-    animation: spin 1s linear infinite;
-    margin-left: 10px;
-    vertical-align: middle;
-  }
-  @keyframes spin {
-    0% { transform: rotate(0deg);}
-    100% { transform: rotate(360deg);}
-  }
+* {margin:0; padding:0; box-sizing:border-box; font-family: 'Roboto', sans-serif;}
+body {background: #f7f7f7; color: #333; display: flex; flex-direction: column; align-items: center; justify-content: flex-start; min-height: 100vh; padding: 40px 20px;}
+h1 {font-size: 3rem; margin-bottom: 30px; color: #111;}
+.container {max-width: 700px; width: 100%; background: #fff; border-radius: 15px; padding: 30px; box-shadow: 0 10px 40px rgba(0,0,0,0.1);}
+textarea {width: 100%; height: 120px; background: #f5f5f5; color: #111; border: 1px solid #ccc; border-radius: 12px; padding: 15px; font-size: 1rem; resize: none;}
+button {background: #0077cc; border: none; color: #fff; font-weight: 600; padding: 12px 25px; margin-top: 15px; cursor: pointer; border-radius: 12px; font-size: 1.1rem; transition: 0.3s; width: 100%;}
+button:hover {background: #005fa3;}
+.response {margin-top: 25px; background: #f5f5f5; border: 1px solid #ddd; border-radius: 12px; padding: 15px; min-height: 100px; font-size: 1rem; word-wrap: break-word; max-height: 400px; overflow-y: auto;}
+img {max-width: 100%; border-radius: 12px; margin-top: 10px;}
+.message {margin-bottom: 15px;}
+.user {color: #0077cc; font-weight: bold;}
+.ai {color: #333; margin-left: 5px;}
 </style>
 </head>
 <body>
+<h1>NeoGPT</h1>
 <div class="container">
-  <h1>NeoGPT</h1>
-
-  <!-- Chat Section -->
-  <h2>💬 Chat with NeoGPT</h2>
-  <textarea id="chat-input" rows="3" placeholder="Type your message..."></textarea>
-  <button onclick="sendChat()">Send</button>
-  <div id="chat-output" class="output"></div>
-
-  <!-- Image Generation Section -->
-  <h2>🖼️ Generate AI Images</h2>
-  <textarea id="image-input" rows="3" placeholder="Describe the image you want..."></textarea>
-  <button onclick="generateImage()">Generate Image</button>
-  <div id="image-output" class="output"></div>
+    <textarea id="input" placeholder="Type a prompt..."></textarea>
+    <button onclick="sendPrompt()">Send</button>
+    <div id="output" class="response"></div>
 </div>
 
 <script>
-  const backendURL = "https://CreatorOfNeoGPT.pythonanywhere.com";
+const backendUrl = "https://CreatorOfNeoGPT.pythonanywhere.com";
+let chatMemory = []; // stores the conversation
 
-  async function sendChat() {
-    const prompt = document.getElementById("chat-input").value;
-    if (!prompt) return;
-    const chatOutput = document.getElementById("chat-output");
-    chatOutput.innerHTML += `<div class="chat-message"><strong>You:</strong> ${prompt}</div>`;
-    document.getElementById("chat-input").value = "";
+async function sendPrompt() {
+    const prompt = document.getElementById("input").value;
+    if (!prompt.trim()) return;
+    const outputDiv = document.getElementById("output");
 
-    // Loading indicator
-    const loading = document.createElement('span');
-    loading.className = 'loading';
-    chatOutput.appendChild(loading);
+    // Add user message to memory
+    chatMemory.push({type: "user", text: prompt});
+    renderMemory();
 
     try {
-      const res = await fetch(`${backendURL}/chat`, {
-        method: "POST",
-        headers: {"Content-Type": "application/json"},
-        body: JSON.stringify({prompt})
-      });
-      const data = await res.json();
-      loading.remove();
+        // Chat request
+        const chatRes = await fetch(`${backendUrl}/chat`, {
+            method: "POST",
+            headers: {"Content-Type": "application/json"},
+            body: JSON.stringify({prompt})
+        });
+        const chatData = await chatRes.json();
+        let responseText = chatData.response || JSON.stringify(chatData);
 
-      if (data.response) {
-        chatOutput.innerHTML += `<div class="chat-message"><strong>NeoGPT:</strong> ${data.response}</div>`;
-      } else {
-        chatOutput.innerHTML += `<div class="chat-message" style="color:red">Error: Could not get response</div>`;
-      }
-      chatOutput.scrollTop = chatOutput.scrollHeight;
+        // Add AI response to memory
+        chatMemory.push({type: "ai", text: responseText});
+        renderMemory();
     } catch (err) {
-      loading.remove();
-      chatOutput.innerHTML += `<div class="chat-message" style="color:red">Error: ${err}</div>`;
+        chatMemory.push({type: "ai", text: "Error connecting to backend."});
+        renderMemory();
     }
-  }
 
-  async function generateImage() {
-    const prompt = document.getElementById("image-input").value;
-    if (!prompt) return;
-    const imageOutput = document.getElementById("image-output");
-    imageOutput.innerHTML = `<div class="loading"></div> Generating image...`;
+    document.getElementById("input").value = "";
+}
 
-    try {
-      const res = await fetch(`${backendURL}/image`, {
-        method: "POST",
-        headers: {"Content-Type": "application/json"},
-        body: JSON.stringify({prompt})
-      });
-      const data = await res.json();
-
-      if (data[0] && data[0].generated_image_url) {
-        imageOutput.innerHTML = `<img class="generated-image" src="${data[0].generated_image_url}" alt="Generated Image">`;
-      } else {
-        imageOutput.innerHTML = `<div style="color:red">Error: Could not generate image</div>`;
-      }
-    } catch (err) {
-      imageOutput.innerHTML = `<div style="color:red">Error: ${err}</div>`;
-    }
-  }
+function renderMemory() {
+    const outputDiv = document.getElementById("output");
+    outputDiv.innerHTML = "";
+    chatMemory.forEach(msg => {
+        const div = document.createElement("div");
+        div.className = "message " + msg.type;
+        div.innerHTML = `<span class="${msg.type}">${msg.type === "user" ? "You:" : "NeoGPT:"}</span> ${msg.text}`;
+        outputDiv.appendChild(div);
+    });
+    outputDiv.scrollTop = outputDiv.scrollHeight;
+}
 </script>
 </body>
 </html>
