--- a/index.html
+++ b/index.html
@@ -1,78 +1,228 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>NeoGPT</title>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-<style>
-* {margin:0; padding:0; box-sizing:border-box; font-family: 'Roboto', sans-serif;}
-body {background: #f7f7f7; color: #333; display: flex; flex-direction: column; align-items: center; justify-content: flex-start; min-height: 100vh; padding: 40px 20px;}
-h1 {font-size: 3rem; margin-bottom: 30px; color: #111;}
-.container {max-width: 700px; width: 100%; background: #fff; border-radius: 15px; padding: 30px; box-shadow: 0 10px 40px rgba(0,0,0,0.1);}
-textarea {width: 100%; height: 120px; background: #f5f5f5; color: #111; border: 1px solid #ccc; border-radius: 12px; padding: 15px; font-size: 1rem; resize: none;}
-button {background: #0077cc; border: none; color: #fff; font-weight: 600; padding: 12px 25px; margin-top: 15px; cursor: pointer; border-radius: 12px; font-size: 1.1rem; transition: 0.3s; width: 100%;}
-button:hover {background: #005fa3;}
-.response {margin-top: 25px; background: #f5f5f5; border: 1px solid #ddd; border-radius: 12px; padding: 15px; min-height: 100px; font-size: 1rem; word-wrap: break-word; max-height: 400px; overflow-y: auto;}
-img {max-width: 100%; border-radius: 12px; margin-top: 10px;}
-.message {margin-bottom: 15px;}
-.user {color: #0077cc; font-weight: bold;}
-.ai {color: #333; margin-left: 5px;}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NeoGPT</title>
+    <style>
+        /* ---------- GLOBAL ---------- */
+        body {
+            margin: 0;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f9f9f9;
+            color: #111;
+        }
+        h1 {
+            margin: 0;
+            font-size: 2rem;
+        }
+        .container {
+            max-width: 900px;
+            margin: 40px auto;
+            padding: 20px;
+        }
+        button {
+            cursor: pointer;
+            background-color: #111;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 1rem;
+            border-radius: 5px;
+        }
+        button:hover {
+            background-color: #333;
+        }
+
+        /* ---------- HEADER ---------- */
+        header {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        /* ---------- CHAT ---------- */
+        #chatBox {
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            padding: 15px;
+            height: 350px;
+            overflow-y: auto;
+            background-color: #fff;
+        }
+        .message {
+            margin: 10px 0;
+            padding: 10px;
+            border-radius: 8px;
+        }
+        .user-msg {
+            background-color: #d1e7ff;
+            text-align: right;
+        }
+        .neo-msg {
+            background-color: #e2f7e2;
+            text-align: left;
+        }
+
+        /* ---------- INPUT ---------- */
+        .input-area {
+            display: flex;
+            margin-top: 15px;
+            gap: 10px;
+        }
+        .input-area input {
+            flex: 1;
+            padding: 10px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            font-size: 1rem;
+        }
+
+        /* ---------- IMAGE ---------- */
+        #imageBox {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 15px;
+            margin-top: 30px;
+        }
+        #imageBox img {
+            max-width: 250px;
+            border-radius: 10px;
+            border: 1px solid #ccc;
+        }
+
+        /* ---------- LOADING ---------- */
+        .loading {
+            font-style: italic;
+            color: #555;
+        }
+    </style>
 </head>
 <body>
-<h1>NeoGPT</h1>
-<div class="container">
-    <textarea id="input" placeholder="Type a prompt..."></textarea>
-    <button onclick="sendPrompt()">Send</button>
-    <div id="output" class="response"></div>
-</div>
+    <div class="container">
+        <header>
+            <h1>NeoGPT</h1>
+            <p>AI assistant powered by HuggingFace</p>
+        </header>
 
-<script>
-const backendUrl = "https://CreatorOfNeoGPT.pythonanywhere.com";
-let chatMemory = []; // stores the conversation
+        <!-- Chat Section -->
+        <div id="chatBox"></div>
+        <div class="input-area">
+            <input type="text" id="chatInput" placeholder="Type your message...">
+            <button onclick="sendChat()">Send</button>
+        </div>
 
-async function sendPrompt() {
-    const prompt = document.getElementById("input").value;
-    if (!prompt.trim()) return;
-    const outputDiv = document.getElementById("output");
+        <!-- Image Section -->
+        <div style="margin-top:30px;">
+            <input type="text" id="imageInput" placeholder="Type image description...">
+            <button onclick="generateImage()">Generate Image</button>
+        </div>
+        <div id="imageBox"></div>
+    </div>
 
-    // Add user message to memory
-    chatMemory.push({type: "user", text: prompt});
-    renderMemory();
+    <script>
+        const chatBox = document.getElementById('chatBox');
+        const chatInput = document.getElementById('chatInput');
+        const imageInput = document.getElementById('imageInput');
+        const imageBox = document.getElementById('imageBox');
 
-    try {
-        // Chat request
-        const chatRes = await fetch(`${backendUrl}/chat`, {
-            method: "POST",
-            headers: {"Content-Type": "application/json"},
-            body: JSON.stringify({prompt})
+        const backendURL = "https://CreatorOfNeoGPT.pythonanywhere.com";
+
+        // Remember conversation
+        let conversationHistory = [];
+
+        async function sendChat() {
+            const message = chatInput.value.trim();
+            if (!message) return;
+
+            addMessage("user", message);
+            chatInput.value = "";
+
+            conversationHistory.push({ role: "user", content: message });
+
+            addMessage("neo", "Typing...", true);
+
+            try {
+                const response = await fetch(`${backendURL}/chat`, {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ prompt: conversationHistory.map(m => m.content).join("\n") })
+                });
+
+                const data = await response.json();
+                removeTyping();
+                if (data.response) {
+                    addMessage("neo", data.response);
+                    conversationHistory.push({ role: "neo", content: data.response });
+                } else {
+                    addMessage("neo", "Sorry, something went wrong.");
+                }
+            } catch (err) {
+                removeTyping();
+                addMessage("neo", "Error: Could not connect to backend.");
+                console.error(err);
+            }
+        }
+
+        function addMessage(sender, text, isTyping=false) {
+            const div = document.createElement('div');
+            div.classList.add('message');
+            div.classList.add(sender === "user" ? "user-msg" : "neo-msg");
+            div.textContent = text;
+            if (isTyping) div.classList.add('loading');
+            chatBox.appendChild(div);
+            chatBox.scrollTop = chatBox.scrollHeight;
+        }
+
+        function removeTyping() {
+            const loading = document.querySelector('.loading');
+            if (loading) loading.remove();
+        }
+
+        async function generateImage() {
+            const prompt = imageInput.value.trim();
+            if (!prompt) return;
+            imageInput.value = "";
+            const imgDiv = document.createElement('div');
+            imgDiv.textContent = "Generating...";
+            imgDiv.classList.add('loading');
+            imageBox.appendChild(imgDiv);
+
+            try {
+                const response = await fetch(`${backendURL}/image`, {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ prompt })
+                });
+                const data = await response.json();
+                imgDiv.remove();
+
+                if (data && Array.isArray(data)) {
+                    data.forEach(item => {
+                        if (item.url) {
+                            const img = document.createElement('img');
+                            img.src = item.url;
+                            imageBox.appendChild(img);
+                        }
+                    });
+                } else {
+                    const img = document.createElement('img');
+                    img.src = data.url || "";
+                    imageBox.appendChild(img);
+                }
+            } catch (err) {
+                imgDiv.textContent = "Error generating image.";
+                console.error(err);
+            }
+        }
+
+        // Optional: send message with Enter key
+        chatInput.addEventListener("keypress", function(e) {
+            if (e.key === "Enter") sendChat();
         });
-        const chatData = await chatRes.json();
-        let responseText = chatData.response || JSON.stringify(chatData);
 
-        // Add AI response to memory
-        chatMemory.push({type: "ai", text: responseText});
-        renderMemory();
-    } catch (err) {
-        chatMemory.push({type: "ai", text: "Error connecting to backend."});
-        renderMemory();
-    }
-
-    document.getElementById("input").value = "";
-}
-
-function renderMemory() {
-    const outputDiv = document.getElementById("output");
-    outputDiv.innerHTML = "";
-    chatMemory.forEach(msg => {
-        const div = document.createElement("div");
-        div.className = "message " + msg.type;
-        div.innerHTML = `<span class="${msg.type}">${msg.type === "user" ? "You:" : "NeoGPT:"}</span> ${msg.text}`;
-        outputDiv.appendChild(div);
-    });
-    outputDiv.scrollTop = outputDiv.scrollHeight;
-}
-</script>
+        imageInput.addEventListener("keypress", function(e) {
+            if (e.key === "Enter") generateImage();
+        });
+    </script>
 </body>
 </html>
